force-app/main/default/objects/Bulk_Import_History__c/Bulk_Import_History__c.object-meta.xml
<CustomObject>
    <description>This will store the bulk import history details.</description>
    <label>Bulk Import History</label>
    <nameField>
        <displayFormat>BIH-{0000}</displayFormat>
        <label>Bulk Import History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bulk Import History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>