force-app/main/default/objects/Bulk_Import_History__c/fields/Accepted_Records__c.field-meta.xml
<CustomField>
    <fullName>Accepted_Records__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Accepted Records</label>
    <length>255</length>
    <type>Text</type>
</CustomField>