force-app/main/default/objects/Bulk_Import_History__c/fields/File_Name__c.field-meta.xml
<CustomField>
    <fullName>File_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>File Name</label>
    <length>225</length>
    <type>Text</type>
</CustomField>