force-app/main/default/objects/Bulk_Import_History__c/fields/Import_Type__c.field-meta.xml
<CustomField>
    <fullName>Import_Type__c</fullName>
    <label>Import Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PI Bulk Import</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>