force-app/main/default/objects/Bulk_Import_History__c/fields/Initial_Total_Records__c.field-meta.xml
<CustomField>
    <fullName>Initial_Total_Records__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Initial Total Records</label>
    <length>255</length>
    <type>Text</type>
</CustomField>