force-app/main/default/objects/Bulk_Import_History__c/fields/Rejected_Records__c.field-meta.xml
<CustomField>
    <fullName>Rejected_Records__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Rejected Records</label>
    <length>255</length>
    <type>Text</type>
</CustomField>