force-app/main/default/objects/Bulk_Import_History__c/fields/Study_Site__c.field-meta.xml
<CustomField>
    <fullName>Study_Site__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Study Site</label>
    <referenceTo>Study_Site__c</referenceTo>
    <relationshipLabel>Bulk Import History</relationshipLabel>
    <relationshipName>Bulk_Import_History</relationshipName>
    <type>Lookup</type>
</CustomField>