force-app/main/default/objects/Bulk_Import_History__c/fields/Uploaded_By__c.field-meta.xml
<CustomField>
    <fullName>Uploaded_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Uploaded By</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Bulk Import History</relationshipLabel>
    <relationshipName>Bulk_Import_History</relationshipName>
    <type>Lookup</type>
</CustomField>